k8s/production.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: app
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      volumes:
        - name: config
          configMap:
            name: api-config
            defaultMode: 420
      containers:
        - name: api
          image: ${IMAGE}
          ports:
            - name: gql
              containerPort: 3000
              protocol: TCP
            - name: rest
              containerPort: 3100
              protocol: TCP
            - name: portal
              containerPort: 3200
              protocol: TCP
            - name: metrics
              containerPort: 9100
              protocol: TCP
            - name: health
              containerPort: 9200
              protocol: TCP
            - name: pprof
              containerPort: 9300
              protocol: TCP
            - name: eventbridge
              containerPort: 9700
              protocol: TCP
          resources:
            limits:
              cpu: 1500m
              memory: 3250Mi
            requests:
              cpu: 1250m
              memory: 3Gi
          volumeMounts:
            - name: config
              mountPath: /app/config.yaml
              subPath: config.yaml
          livenessProbe:
            tcpSocket:
              port: health
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            tcpSocket:
              port: health
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: app
  labels:
    app: api
spec:
  ports:
    - name: gql
      protocol: TCP
      port: 3000
      targetPort: gql
    - name: rest
      protocol: TCP
      port: 3100
      targetPort: rest
    - name: portal
      protocol: TCP
      port: 3200
      targetPort: portal
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: metrics
    - name: health
      protocol: TCP
      port: 9200
      targetPort: health
    - name: pprof
      protocol: TCP
      port: 9300
      targetPort: pprof
    - name: eventbridge
      protocol: TCP
      port: 9700
      targetPort: eventbridge
  selector:
    app: api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 7m
    external-dns.alpha.kubernetes.io/hostname: 7tv.io
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
    - host: 7tv.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api
                port:
                  name: portal
          - pathType: Prefix
            path: /v3/gql
            backend:
              service:
                name: api
                port:
                  name: gql
          - pathType: Prefix
            path: /v3
            backend:
              service:
                name: api
                port:
                  name: rest
          - pathType: Prefix
            path: /v2/gql
            backend:
              service:
                name: api
                port:
                  name: gql
          - pathType: Prefix
            path: /v2
            backend:
              service:
                name: api
                port:
                  name: rest
  tls:
    - hosts:
        - 7tv.io
      secretName: 7tv-io-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-old
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 7m
    external-dns.alpha.kubernetes.io/hostname: api.7tv.app
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
    - host: api.7tv.app
      http:
        paths:
          - pathType: Prefix
            path: /v3/gql
            backend:
              service:
                name: api
                port:
                  name: gql
          - pathType: Prefix
            path: /v3
            backend:
              service:
                name: api
                port:
                  name: rest
          - pathType: Prefix
            path: /v2/gql
            backend:
              service:
                name: api
                port:
                  name: gql
          - pathType: Prefix
            path: /v2
            backend:
              service:
                name: api
                port:
                  name: rest
  tls:
    - hosts:
        - api.7tv.app
      secretName: 7tv-app-tls
