k8s/staging.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: app-staging
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      volumes:
        - name: config
          configMap:
            name: api-config
            defaultMode: 420
      containers:
        - name: api
          image: harbor.disembark.dev/staging/api:${IMAGE_TAG}
          ports:
            - name: gql
              containerPort: 3000
              protocol: TCP
            - name: rest
              containerPort: 3100
              protocol: TCP
            - name: metrics
              containerPort: 9100
              protocol: TCP
            - name: health
              containerPort: 9200
              protocol: TCP
          resources:
            limits:
              cpu: "4"
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /app/config.yaml
              subPath: config.yaml
          livenessProbe:
            tcpSocket:
              port: health
            initialDelaySeconds: 30
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            tcpSocket:
              port: health
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: app-staging
  labels:
    app: api
spec:
  ports:
    - name: gql
      protocol: TCP
      port: 3000
      targetPort: gql
    - name: rest
      protocol: TCP
      port: 3100
      targetPort: rest
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: metrics
    - name: health
      protocol: TCP
      port: 9200
      targetPort: health
  selector:
    app: api
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: app-staging
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`7tv.io`) && (PathPrefix(`/v3-stage/gql`) || PathPrefix(`/v2-stage/gql`))
      services:
        - kind: Service
          name: api
          namespace: app-staging
          port: gql
    - kind: Rule
      match: Host(`7tv.io`) && (PathPrefix(`/v3-stage`) || PathPrefix(`/v2-stage`))
      services:
        - kind: Service
          name: api
          namespace: app-staging
          port: rest
  tls:
    secretName: 7tv-io-cert
